# khayyam_api

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  config.py  docker-compose.yml  make_zip.sh  pyproject.toml  requirements.txt
khayyam_api/: _info.py  about.py  main.py
