[tool.poetry]
name = "khayyam_api"
version = "0.1.0"
description = "A dead simple Jalali API"
authors = ["Pooria Soltani <pooria.ms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
khayyam = "^3.0.17"
fastapi = "^0.65.2"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
devtools = {extras = ["pygments"], version = "^0.5.1"}

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
